temp fix for unaligned vertical desktop nav itmes

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -15,6 +15,7 @@
 	justify-content: center;
 	list-style-type: none;
 	gap: 20px;
+	margin-top: 12px;
 }
 
 /* .Navbar-container .NavLinks-Ul li a {
